--- a/logintest/index.html
+++ b/logintest/index.html
@@ -8,13 +8,16 @@
   <link rel="icon" href="favicon.ico" />
 
   <!-- Open Graph / Twitter -->
-  <meta property="og:site_name" content="Mirrasets" />
-  <meta property="og:title"     content="Real world assets, mirrored on Stellar" />
-  <meta property="og:url"       content="https://mirrasets.com/" />
+  <meta property="og:site_name"  content="Mirrasets" />
+  <meta property="og:title"      content="Real world assets, mirrored on Stellar" />
+  <meta property="og:url"        content="https://mirrasets.com/" />
   <meta property="og:description" content="Improve trading on Stellar with fiat pegged mirrorcoins" />
-  <meta name="twitter:card"     content="summary_large_image" />
-  <meta name="description"      content="Mirrasets - Real world assets, mirrored on Stellar." />
-  <meta name="viewport"         content="width=device-width, initial-scale=1" />
+  <meta name="twitter:card"      content="summary_large_image" />
+  <meta name="twitter:title"     content="Mirrasets - Real world assets, mirrored on Stellar." />
+  <meta name="twitter:description" content="Improve trading on Stellar with fiat pegged mirrorcoins." />
+  <meta name="twitter:image"     content="https://mirrasets.com/images/open_graph2.png" />
+  <meta name="description"       content="Mirrasets - Real world assets, mirrored on Stellar." />
+  <meta name="viewport"          content="width=device-width, initial-scale=1, minimum-scale=1" />
 
   <!-- Your existing CSS -->
   <link rel="stylesheet" href="https://mirrasets.com/styles/info.css" />
@@ -31,23 +34,45 @@
     <!-- ============== Header ============== -->
     <header class="page-header">
       <a class="main-link" href="/"><img src="/icons/sauk-logo.png" alt="Mirrasets Logo" /></a>
-      <!-- … your existing nav/menu here … -->
+      <div class="menu-toggle">…</div>
+      <div class="menu">
+        <nav>
+          <a href="/" style="font-weight:bold;">Home</a>
+          <div class="dropdown">
+            <a href="#" class="dropdown-toggle">Our Mirrored Assets ▾</a>
+            <div class="dropdown-menu">
+              <a href="/gbpc/">GBPC</a>
+              <a href="/eurc/">EURC</a>
+              <a href="/krwc/">KRWC</a>
+            </div>
+          </div>
+          <a href="/reserves/" style="font-weight:bold;">Reserves</a>
+          <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank" style="font-weight:bold;">AQUA Voting</a>
+          <a href="https://aqua.network/rewards/" target="_blank" style="font-weight:bold;">AQUA Rewards</a>
+        </nav>
+        <div class="social-links">
+          <a href="https://x.com/mirrasets" target="_blank">…X SVG…</a>
+          <a href="https://discord.gg/DjBhVqmwup" target="_blank">…Discord SVG…</a>
+          <a href="mailto:support@mirrasets.com">…Email SVG…</a>
+        </div>
+      </div>
     </header>
 
     <!-- ============== Hero ============== -->
     <section class="main-block">
-      <img src="/images/header_image_mobile.png" alt="Mirrasets Hero" style="width:100%;height:auto;" />
+      <img src="/images/header_image_mobile.png" alt="Mirrasets Hero" style="width:100%; height:auto;" />
       <div class="hero-text">
-        <h1>Real world assets,<br/>mirrored on the Stellar network</h1>
+        <h1>Real world assets,<br />mirrored on the Stellar network</h1>
       </div>
     </section>
 
     <!-- ==== Wallet Connect Section ==== -->
     <section class="wallet-login centered-block" style="text-align:center; padding:3rem 1rem;">
       <h2>Connect your Stellar Wallet</h2>
-      <!-- We’ll render our own button here -->
-      <button id="connect-btn"
-              style="padding:0.75rem 1.5rem; font-size:1rem; border:none; background:#4a4a4a; color:#fff; border-radius:4px;">
+      <button
+        id="connect-btn"
+        style="padding:0.75rem 1.5rem; font-size:1rem; border:none; background:#4a4a4a; color:#fff; border-radius:4px;"
+      >
         Connect with Stellar
       </button>
     </section>
@@ -56,13 +81,17 @@
     <section class="wallets-and-exchanges centered-block">
       <div class="text wallets">
         <h4>What We Do</h4>
-        <p>Mirrasets mirrors real world assets on the Stellar network. We currently provide the pegged stablecoins GBPC, KRWC & EURC…</p>
+        <p>Mirrasets mirrors real world assets on the Stellar network. We currently provide the pegged stablecoins GBPC, KRWC &amp; EURC…</p>
         <p>Each token is backed by a verifiable USDC reserve on the Stellar ledger…</p>
       </div>
       <div class="text exchanges">
-        <a class="twitter-timeline"
-           data-width="400" data-height="550" data-theme="light"
-           href="https://twitter.com/Mirrasets?ref_src=twsrc%5Etfw">
+        <a
+          class="twitter-timeline"
+          data-width="400"
+          data-height="550"
+          data-theme="light"
+          href="https://twitter.com/Mirrasets?ref_src=twsrc%5Etfw"
+        >
           Tweets by Mirrasets
         </a>
         <script async src="https://platform.twitter.com/widgets.js"></script>
@@ -81,13 +110,11 @@
 
   <!-- Your existing scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-  <script data-cfasync="false"
-          src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js">
-  </script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
   <script src="https://mirrasets.com/scripts/info.js"></script>
   <script src="https://mirrasets.com/scripts/mobile-menu.js"></script>
 
-  <!-- ==== Stellar Wallets Kit Initialization ==== -->
+  <!-- ==== Stellar Wallets Kit + WalletConnect Integration ==== -->
   <script type="module">
     import {
       StellarWalletsKit,
@@ -100,36 +127,35 @@
       WalletConnectAllowedMethods
     } from 'https://cdn.jsdelivr.net/npm/@creit.tech/stellar-wallets-kit@latest/dist/modules/walletconnect.module.esm.js';
 
-    // 1) Instantiate the kit, include all the “built-in” modules plus WalletConnect
+    // Initialize the kit with all built-in wallets + WalletConnect
     const kit = new StellarWalletsKit({
-      network: WalletNetwork.PUBLIC,        // change to TESTNET if you want
+      network: WalletNetwork.PUBLIC,       // or TESTNET if you prefer
       modules: [
-        ...allowAllModules(),               // Freighter, Albedo, Lobstr, xBull, etc.
-        new WalletConnectModule({
-          url:       window.location.origin,
-          projectId: 'YOUR_PROJECT_ID',      // ← replace this
-          method:    WalletConnectAllowedMethods.SIGN,
-          name:      'Mirrasets',
-          description: 'Connect your Stellar Wallet to Mirrasets',
-          icons:     [window.location.origin + '/icons/sauk-logo.png'],
-          network:   WalletNetwork.PUBLIC,
+        ...allowAllModules(),              // Freighter, Albedo, Lobstr, xBull, etc.
+        new WalletConnectModule({          // Mobile fallback
+          url:        window.location.origin,
+          projectId:  'YOUR_PROJECT_ID',   // ← replace this
+          method:     WalletConnectAllowedMethods.SIGN,
+          name:       'Mirrasets',
+          description:'Connect your Stellar Wallet to Mirrasets',
+          icons:      [window.location.origin + '/icons/sauk-logo.png'],
+          network:    WalletNetwork.PUBLIC,
         })
       ]
     });
 
-    // 2) Wire up our own button to open the modal
+    // Wire up our manual “Connect with Stellar” button
     document.getElementById('connect-btn').addEventListener('click', () => {
       kit.openModal({
         modalTitle: 'Select a Stellar Wallet',
         onWalletSelected: async (option) => {
-          // set the chosen wallet and grab the address
-          kit.setWallet(option.id);
+          await kit.setWallet(option.id);
           const { address } = await kit.getAddress();
           console.log('✅ Connected:', option.id, address);
-          // → send `address` to your backend to start a session!
+          // → send `address` to your backend to establish a session
         },
         onClosed: (err) => {
-          if (err) console.warn('Modal closed with error', err);
+          if (err) console.warn('🚫 Modal closed with error:', err);
         }
       });
     });
