--- a/logintest/index.html
+++ b/logintest/index.html
@@ -1,58 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <title>Stellar Wallets Kit Minimal Demo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-  <!-- 1) Core CSS (v1.7.5) -->
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/@creit.tech/stellar-wallets-kit@1.7.5/dist/index.css"
-  />
+  <meta charset="utf-8"/>
+  <title>Stellar Wallets Kit UMD Demo</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  
+  <!-- UMD bundle: exposes StellarWalletsKitLib -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/@creit.tech/stellar-wallets-kit@1.7.5/dist/index.umd.min.js"
+    defer
+  ></script>
+  <!-- (You can drop in the CSS if you find the correct path later) -->
 </head>
-<body style="display:flex; flex-direction:column; align-items:center; justify-content:center; height:100vh; margin:0; font-family:sans-serif;">
+<body style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100vh;margin:0;font-family:sans-serif;">
 
-  <h1>Stellar Wallets Kit Demo</h1>
-  <button
-    id="connect-btn"
-    style="padding:0.75rem 1.5rem; font-size:1rem; border:none; background:#4a4a4a; color:#fff; border-radius:4px; cursor:pointer;"
-  >
+  <h1>Stellar Wallets Kit UMD Demo</h1>
+  <button id="connect-btn"
+          style="padding:.75rem 1.5rem;font-size:1rem;border:none;background:#4a4a4a;color:#fff;border-radius:4px;cursor:pointer;">
     Connect with Stellar
   </button>
 
-  <!-- 2) ESM build & initialization -->
-  <script type="module">
-    import {
-      StellarWalletsKit,
-      WalletNetwork,
-      allowAllModules
-    } from 'https://cdn.jsdelivr.net/npm/@creit.tech/stellar-wallets-kit@1.7.5/dist/index.esm.js';
+  <script>
+    // Wait for the UMD bundle to load (defer ensures this runs after)
+    document.addEventListener('DOMContentLoaded', () => {
+      // Grab the Kit from the global
+      const {
+        StellarWalletsKit,
+        WalletNetwork,
+        allowAllModules
+      } = StellarWalletsKitLib;
 
-    // 3) Instantiate the kit (PUBLIC network, all built-in modules)
-    const kit = new StellarWalletsKit({
-      network: WalletNetwork.PUBLIC,
-      modules: allowAllModules()
-    });
+      // Instantiate on PUBLIC network with every built-in module
+      const kit = new StellarWalletsKit({
+        network: WalletNetwork.PUBLIC,
+        modules: allowAllModules()
+      });
 
-    // 4) Open the modal on button click, per the guide’s API
-    document.getElementById('connect-btn').addEventListener('click', () => {
-      kit.openModal({
-        modalTitle: 'Select a Stellar Wallet',
-        notAvailableText: 'No Stellar wallets found. Please install Freighter or another supported wallet.',
-        onWalletSelected: async (option) => {
-          // per guide: set the wallet, then get address
-          await kit.setWallet(option.id);
-          const { address } = await kit.getAddress();
-          console.log('✅ Connected:', option.id, address);
-          alert(`Connected!\n${option.id}: ${address}`);
-        },
-        onClosed: (err) => {
-          if (err) {
-            console.error('❌ Modal closed with error:', err);
-            alert('Wallet selector closed or error occurred');
+      // Open the modal on button click
+      document.getElementById('connect-btn').addEventListener('click', () => {
+        kit.openModal({
+          modalTitle: 'Select a Stellar Wallet',
+          notAvailableText: 'No wallets found. Please install Freighter or another supported wallet.',
+          onWalletSelected: async (opt) => {
+            await kit.setWallet(opt.id);
+            const { address } = await kit.getAddress();
+            alert(`Connected!\n${opt.id}: ${address}`);
+          },
+          onClosed: (err) => {
+            if (err) alert('Modal closed or no wallets available');
           }
-        }
+        });
       });
     });
   </script>
