--- a/logintest/index.html
+++ b/logintest/index.html
@@ -14,13 +14,11 @@
   <button id="connect-btn">Connect with Freighter</button>
   <div id="public-key"></div>
 
-  <script type="module">
-    // import a single bundled ESM from esm.sh (includes all deps)
-    import {
-      StellarWalletsKit,
-      WalletNetwork,
-      FreighterModule
-    } from 'https://esm.sh/@creit.tech/stellar-wallets-kit@1.7.5';
+  <!-- 1) Load the UMD bundle from jsDelivr -->
+  <script src="https://cdn.jsdelivr.net/gh/Creit-Tech/Stellar-Wallets-Kit@1.7.5/dist/stellar-wallets-kit.umd.min.js"></script>
+  <!-- 2) Use it via window.StellarWalletsKit -->
+  <script>
+    const { StellarWalletsKit, WalletNetwork, FreighterModule } = window.StellarWalletsKit;
 
     const freighter = new FreighterModule();
     const kit = new StellarWalletsKit({
