--- a/logintest/index.html
+++ b/logintest/index.html
@@ -14,12 +14,11 @@
   <button id="connect-btn">Connect with Freighter</button>
   <div id="public-key"></div>
 
-  <!-- 1) Load the UMD bundle from jsDelivr -->
-  <script src="https://cdn.jsdelivr.net/gh/Creit-Tech/Stellar-Wallets-Kit@1.7.5/dist/stellar-wallets-kit.umd.min.js"></script>
-  <!-- 2) Use it via window.StellarWalletsKit -->
+  <!-- 1) Correct UMD bundle URL -->
+  <script src="https://cdn.jsdelivr.net/npm/@creit.tech/stellar-wallets-kit@1.7.5/dist/stellar-wallets-kit.umd.min.js"></script>
+  <!-- 2) Your inline code -->
   <script>
     const { StellarWalletsKit, WalletNetwork, FreighterModule } = window.StellarWalletsKit;
-
     const freighter = new FreighterModule();
     const kit = new StellarWalletsKit({
       network: WalletNetwork.PUBLIC,
